feature<*>: add translation for Simplified Chinese

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Resources/Icons.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Resources/Controls.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Resources/Themes/Dark.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Resources/Locales/en_US.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
