--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -38,12 +38,12 @@
 
             <!-- SearchBar -->
             <Grid x:Name="searchBar" Margin="0,-32,0,0" Grid.Row="0">
-                <TextBox x:Name="txtSearch" Margin="4" Height="24" Padding="0,0,22,0" helpers:TextBoxHelper.Placeholder="SEARCH SHA/SUBJECT/AUTHOR. PRESS ENTER TO SEARCH, ESC TO QUIT" PreviewKeyDown="PreviewSearchKeyDown"/>
+                <TextBox x:Name="txtSearch" Margin="4" Height="24" Padding="0,0,22,0" helpers:TextBoxHelper.Placeholder="{StaticResource Text.Histories.Search}" PreviewKeyDown="PreviewSearchKeyDown"/>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="8,0">
-                    <Button ToolTip="CLEAR" Click="ClearSearch">
+                    <Button ToolTip="{StaticResource Text.Histories.SearchClear}" Click="ClearSearch">
                         <Path Width="12" Height="12" Fill="{StaticResource Brush.FG2}" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Clear}"/>
                     </Button>
-                    <Button Margin="8,0,0,0" ToolTip="CLOSE" Click="HideSearchBarByButton">
+                    <Button Margin="8,0,0,0" ToolTip="{StaticResource Text.Close}" Click="HideSearchBarByButton">
                         <Path Width="12" Height="12" Fill="{StaticResource Brush.FG2}" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Up}"/>
                     </Button>
                 </StackPanel>
@@ -191,7 +191,7 @@
                 <!-- Layout Switch -->
                 <ToggleButton
                     Style="{StaticResource Style.ToggleButton.Orientation}"
-                    ToolTip="Toggle Horizontal/Vertical Layout"
+                    ToolTip="{StaticResource Text.Histories.DisplayMode}"
                     IsChecked="{Binding Source={x:Static sourcegit:App.Setting}, Path=UI.MoveCommitViewerRight, Mode=TwoWay}"
                     Checked="ChangeOrientation" Unchecked="ChangeOrientation"/>
                 
@@ -204,13 +204,14 @@
                     Fill="{StaticResource Brush.FG1}">
                     <Path.ToolTip>
                         <StackPanel Orientation="Vertical" TextElement.FontFamily="Consolas">
-                            <Label Content="HISTORIES GUIDE" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
-                            <Label Content="1. Select single commit to view detail"/>
-                            <Label Content="2. Select two commits to show differences"/>
-                            <Label Content="3. Select more than 2 commits to count"/>
+                            <Label Content="{StaticResource Text.Histories.Guide}" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
+                            <Label Content="{StaticResource Text.Histories.Guide_1}"/>
+                            <Label Content="{StaticResource Text.Histories.Guide_2}"/>
+                            <Label Content="{StaticResource Text.Histories.Guide_3}"/>
+                            <Label Content="{StaticResource Text.Histories.Guide_4}"/>
                         </StackPanel>
                     </Path.ToolTip>
-                </Path>                    
+                </Path>
             </StackPanel>
         </Grid>
     </Grid>
