--- a/src/UI/Pull.xaml
+++ b/src/UI/Pull.xaml
@@ -23,9 +23,9 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.ColumnSpan="2" FontWeight="DemiBold" FontSize="18" Content="Pull (Fetch &amp; Merge)"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" FontWeight="DemiBold" FontSize="18" Content="{StaticResource Text.Pull.Title}"/>
 
-        <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="Remote :"/>
+        <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.Pull.Remote}"/>
         <ComboBox Grid.Row="2" Grid.Column="1"
                   x:Name="combRemotes"
                   VerticalAlignment="Center"
@@ -40,7 +40,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Label Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" Content="Branch :"/>
+        <Label Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.Pull.Branch}"/>
         <ComboBox Grid.Row="3" Grid.Column="1"
                   x:Name="combBranches"
                   VerticalAlignment="Center">
@@ -54,23 +54,23 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Label Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Content="Into :"/>
+        <Label Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Content="{StaticResource Text.Pull.Into}"/>
         <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal">
             <Path Width="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
-            <TextBlock x:Name="txtInto" Text="master" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
+            <TextBlock x:Name="txtInto" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
         </StackPanel>
 
         <CheckBox Grid.Row="5" Grid.Column="1"
                   x:Name="chkRebase"
                   IsChecked="True"
                   VerticalAlignment="Center"
-                  Content="Use rebase instead of merge"/>
+                  Content="{StaticResource Text.Pull.UseRebase}"/>
 
         <CheckBox Grid.Row="6" Grid.Column="1"
                   x:Name="chkAutoStash"
                   IsChecked="True"
                   VerticalAlignment="Center"
-                  Content="Stash &amp; reapply local changes"/>
+                  Content="{StaticResource Text.Pull.AutoStash}"/>
 
         <Grid Grid.Row="8" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
@@ -80,8 +80,8 @@
                 <ColumnDefinition Width="80"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="1" Click="Start" Content="SURE" Style="{StaticResource Style.Button.AccentBordered}"/>
-            <Button Grid.Column="3" Click="Cancel" Content="CANCEL" Style="{StaticResource Style.Button.Bordered}"/>
+            <Button Grid.Column="1" Click="Start" Content="{StaticResource Text.Sure}" Style="{StaticResource Style.Button.AccentBordered}"/>
+            <Button Grid.Column="3" Click="Cancel" Content="{StaticResource Text.Cancel}" Style="{StaticResource Style.Button.Bordered}"/>
         </Grid>
     </Grid>
 </UserControl>
