--- a/src/UI/SettingDialog.xaml
+++ b/src/UI/SettingDialog.xaml
@@ -8,8 +8,8 @@
         xmlns:app="clr-namespace:SourceGit"
         xmlns:git="clr-namespace:SourceGit.Git"
         mc:Ignorable="d"
-        Height="548" Width="500"
-        Title="Preference"
+        Height="600" Width="500"
+        Title="{StaticResource Text.Preference}"
         WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
 
     <!-- Enable WindowChrome Feature -->
@@ -37,7 +37,7 @@
             <Path Width="20" Height="20" Margin="6,-1,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
 
             <!-- Title -->
-            <Label Grid.Column="1" Content="Preference" FontWeight="Light"/>
+            <Label Grid.Column="1" Content="{StaticResource Text.Preference}" FontWeight="Light"/>
 
             <!-- Close Button -->
             <Button Click="Close" Width="32" Grid.Column="3" WindowChrome.IsHitTestVisibleInChrome="True">
@@ -59,6 +59,7 @@
         <Grid Grid.Row="1" Margin="16,8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="36"/>
+                <RowDefinition Height="28"/>
                 <RowDefinition Height="28"/>
                 <RowDefinition Height="28"/>
                 <RowDefinition Height="18"/>
@@ -83,25 +84,37 @@
             </Grid.ColumnDefinitions>
 
             <!-- 通用 -->
-            <Label Grid.Row="0" Grid.ColumnSpan="2" Content="GENERAL SETTING" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
-            <Label Grid.Row="1" Grid.Column="0" Content="Light Theme :" HorizontalAlignment="Right"/>
-            <CheckBox 
-                Grid.Row="1" 
-                Grid.Column="1" 
-                IsChecked="{Binding Source={x:Static app:App.Setting}, Path=UI.UseLightTheme, Mode=TwoWay}"
-                Content="Restart required"
-                TextElement.FontStyle="Italic"/>
-            <Label Grid.Row="2" Grid.Column="0" Content="Check for Update :" HorizontalAlignment="Right"/>
+            <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+                <Label Content="{StaticResource Text.Preference.General}" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+                <Label Content="{StaticResource Text.Preference.RestartRequired}" Opacity=".5"/>
+            </StackPanel>
+            <Label Grid.Row="1" Grid.Column="0" Content="{StaticResource Text.Preference.Locale}" HorizontalAlignment="Right"/>
+            <ComboBox Grid.Row="1" Grid.Column="1"
+                  x:Name="cmbLang"
+                  Height="24"
+                  Width="120"
+                  HorizontalAlignment="Left"
+                  VerticalContentAlignment="Center"
+                  DisplayMemberPath="Desc"
+                  SelectionChanged="ChangeLanguage"/>
+
+            <Label Grid.Row="2" Grid.Column="0" Content="{StaticResource Text.Preference.UseLight}" HorizontalAlignment="Right"/>
             <CheckBox 
                 Grid.Row="2" 
+                Grid.Column="1" 
+                IsChecked="{Binding Source={x:Static app:App.Setting}, Path=UI.UseLightTheme, Mode=TwoWay}"
+                TextElement.FontStyle="Italic"/>
+            <Label Grid.Row="3" Grid.Column="0" Content="{StaticResource Text.Preference.CheckUpdate}" HorizontalAlignment="Right"/>
+            <CheckBox 
+                Grid.Row="3" 
                 Grid.Column="1" 
                 IsChecked="{Binding Source={x:Static app:App.Setting}, Path=CheckUpdate, Mode=TwoWay}"
                 TextElement.FontStyle="Italic"/>
 
             <!-- GIT相关配置 -->
-            <Label Grid.Row="4" Grid.ColumnSpan="2" Content="GIT INSTANCE" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
-            <Label Grid.Row="5" Grid.Column="0" Content="Install Path :" HorizontalAlignment="Right"/>
-            <Grid Grid.Row="5" Grid.Column="1">
+            <Label Grid.Row="5" Grid.ColumnSpan="2" Content="{StaticResource Text.Preference.Git}" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+            <Label Grid.Row="6" Grid.Column="0" Content="{StaticResource Text.Preference.Git.Path}" HorizontalAlignment="Right"/>
+            <Grid Grid.Row="6" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="28"/>
@@ -111,13 +124,13 @@
                          x:Name="txtGitPath"
                          Height="24" 
                          Text="{Binding Source={x:Static app:App.Setting}, Path=Tools.GitExecutable, Mode=TwoWay}"
-                         helpers:TextBoxHelper.Placeholder="Input path for git.exe"/>
+                         helpers:TextBoxHelper.Placeholder="{StaticResource Text.Preference.Git.Path.Placeholder}"/>
                 <Button Grid.Column="1" Width="24" Height="24" Click="SelectGitPath" Padding="0" BorderThickness="1" Style="{StaticResource Style.Button.Bordered}">
                     <Path Width="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder}"/>
                 </Button>
             </Grid>
-            <Label Grid.Row="6" Grid.Column="0" Content="Default Clone Dir :" HorizontalAlignment="Right"/>
-            <Grid Grid.Row="6" Grid.Column="1">
+            <Label Grid.Row="7" Grid.Column="0" Content="{StaticResource Text.Preference.Git.Dir}" HorizontalAlignment="Right"/>
+            <Grid Grid.Row="7" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="28"/>
@@ -127,20 +140,20 @@
                          x:Name="txtGitCloneDir"
                          Height="24" 
                          Text="{Binding Source={x:Static app:App.Setting}, Path=Tools.GitDefaultCloneDir, Mode=TwoWay}"
-                         helpers:TextBoxHelper.Placeholder="Default path to clone repo into"/>
+                         helpers:TextBoxHelper.Placeholder="{StaticResource Text.Preference.Git.Dir.Placeholder}"/>
                 <Button Grid.Column="1" Width="24" Height="24" Click="SelectDefaultClonePath" Padding="0" BorderThickness="1" Style="{StaticResource Style.Button.Bordered}">
                     <Path Width="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder}"/>
                 </Button>
             </Grid>
 
             <!-- Global User -->
-            <Label Grid.Row="8" Grid.ColumnSpan="2" Content="GLOBAL SETTING" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
-            <Label Grid.Row="9" Grid.Column="0" Content="Name :" HorizontalAlignment="Right"/>
-            <TextBox Grid.Row="9" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user name" Text="{Binding ElementName=me, Path=GlobalUser, Mode=TwoWay}"/>
-            <Label Grid.Row="10" Grid.Column="0" Content="Email :" HorizontalAlignment="Right"/>
-            <TextBox Grid.Row="10" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user email" Text="{Binding ElementName=me, Path=GlobalUserEmail, Mode=TwoWay}"/>
-            <Label Grid.Row="11" Grid.Column="0" Content="Auto CRLF :" HorizontalAlignment="Right"/>
-            <ComboBox Grid.Row="11" Grid.Column="1"
+            <Label Grid.Row="9" Grid.ColumnSpan="2" Content="{StaticResource Text.Preference.Global}" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+            <Label Grid.Row="10" Grid.Column="0" Content="{StaticResource Text.Preference.User}" HorizontalAlignment="Right"/>
+            <TextBox Grid.Row="10" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user name" Text="{Binding ElementName=me, Path=GlobalUser, Mode=TwoWay}"/>
+            <Label Grid.Row="11" Grid.Column="0" Content="{StaticResource Text.Preference.Email}" HorizontalAlignment="Right"/>
+            <TextBox Grid.Row="11" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user email" Text="{Binding ElementName=me, Path=GlobalUserEmail, Mode=TwoWay}"/>
+            <Label Grid.Row="12" Grid.Column="0" Content="{StaticResource Text.Preference.CRLF}" HorizontalAlignment="Right"/>
+            <ComboBox Grid.Row="12" Grid.Column="1"
                   x:Name="cmbAutoCRLF"
                   Height="24"
                   HorizontalAlignment="Stretch"
@@ -157,9 +170,9 @@
             </ComboBox>
 
             <!-- 合并工具配置 -->
-            <Label Grid.Row="13" Grid.ColumnSpan="2" Content="MERGE TOOL" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
-            <Label Grid.Row="14" Grid.Column="0" Content="Merger :" HorizontalAlignment="Right"/>
-            <ComboBox Grid.Row="14" Grid.Column="1"
+            <Label Grid.Row="14" Grid.ColumnSpan="2" Content="{StaticResource Text.Preference.Merger}" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+            <Label Grid.Row="15" Grid.Column="0" Content="{StaticResource Text.Preference.Merger.Type}" HorizontalAlignment="Right"/>
+            <ComboBox Grid.Row="15" Grid.Column="1"
                  Height="24"
                  Padding="2,0,0,0"
                  HorizontalContentAlignment="Left"
@@ -168,8 +181,8 @@
                  ItemsSource="{Binding Source={x:Static git:MergeTool.Supported}}"
                  DisplayMemberPath="Name"
                  SelectionChanged="ChangeMergeTool"/>
-            <Label Grid.Row="15" Grid.Column="0" Content="Install Path :" HorizontalAlignment="Right"/>
-            <Grid Grid.Row="15" Grid.Column="1">
+            <Label Grid.Row="16" Grid.Column="0" Content="{StaticResource Text.Preference.Merger.Path}" HorizontalAlignment="Right"/>
+            <Grid Grid.Row="16" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="28"/>
@@ -179,13 +192,13 @@
                          x:Name="txtMergePath"
                          Height="24" 
                          Text="{Binding Source={x:Static app:App.Setting}, Path=Tools.MergeExecutable, Mode=TwoWay}"
-                         helpers:TextBoxHelper.Placeholder="Input path for merge tool"/>
+                         helpers:TextBoxHelper.Placeholder="{StaticResource Text.Preference.Merger.Path.Placeholder}"/>
                 <Button Grid.Column="1" Width="24" Height="24" Click="SelectMergeToolPath" Padding="0" BorderThickness="1" Style="{StaticResource Style.Button.Bordered}">
                     <Path Width="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder}"/>
                 </Button>
             </Grid>
-            <Label Grid.Row="16" Grid.Column="0" Content="Command :" HorizontalAlignment="Right"/>
-            <TextBlock Grid.Row="16" Grid.Column="1" 
+            <Label Grid.Row="17" Grid.Column="0" Content="{StaticResource Text.Preference.Merger.Cmd}" HorizontalAlignment="Right"/>
+            <TextBlock Grid.Row="17" Grid.Column="1" 
                    x:Name="txtMergeParam"
                    VerticalAlignment="Center"
                    Foreground="{StaticResource Brush.FG2}"/>
